--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -11,7 +11,7 @@ section:
 designation: Bookkeeper and Accounting Professional
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/resume.pdf"
+resume: "files/IanMckay_Resume.pdf"
 
 # a summary about you
 summary: 'I am a passionate accounting professional with over 5 years of working experience in accounting, and over 10 years of professional work experience. I have worked with small family businesses as well as large corporations across multiple industries.'
