--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -26,7 +26,7 @@ experiences:
     - Established best-practice procedures and protocols that were missing
     - Preparing financial documents required to secure things like corporate loans
     - Preparing and submitting sales data to the franchiser
-    - Assisting in processing payroll
+    - Processing payroll bi-weekly and preparing ROEs and T4s
 
   - designation: Bookkeeper
     start: Jan 2015
@@ -64,7 +64,7 @@ experiences:
     # company overview
     overview: Little Caesars is one of North America's largest pizza chains. It operates and franchises pizza restaurants. 
   positions:
-  - designation: Store Manager
+  - designation: Zone Manager
     start: Aug 2010
     end: Oct 2014
     responsibilities:
